--- a/index.html
+++ b/index.html
@@ -13,17 +13,25 @@
 <body>
 
   <div class="card">
-    <img class="cardTop" src="./images/bg-pattern-card.svg"/>
-    <img class="profileImage" src="./images/image-victor.jpg"/>
+    <div class="cardTop"></div>
 
 
     <div class="content">
+      
+      <div class="profileDiv">
+        <img class="profileImage" src="./images/image-victor.jpg"/>
+      </div>
+
+
       <div class="userInfo">
+
         <div class="name-age">
           <h2>Victor Crest</h2>
           <h2>26</h2>
         </div>
+
         <p>London</p>
+
       </div>
 
       <div class="statsContainer">
