changed div to main

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-  <div class="card">
+  <main class="card">
     <div class="cardTop"></div>
 
 
@@ -51,7 +51,7 @@
 
     </div>
 
-  </div>
+  </main>
 
 </body>
 </html>
